--- a/src/Wallet/Wallet.css
+++ b/src/Wallet/Wallet.css
@@ -1,11 +1,10 @@
-.card {
+.walletcard {
     text-align: center;
     margin-top: 50px;
     margin-left: 60px;
-    padding-top: 10px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 40px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
     width: fit-content;
     height: fit-content;
     background: rgb(255, 255, 255);
@@ -15,7 +14,7 @@
     border: rgb(250, 250, 250) 0.2em solid;
    }
    
-   .card:hover {
+   .walletcard:hover {
     border: #725AC1 0.2em solid;
    }
 
@@ -32,8 +31,8 @@
 
 .inputbox{
     padding: 5px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 1px;
+    margin-bottom: 1px;
     border-width: 1px;
     border-color: #a7a7a7;
     border-style: solid;
@@ -50,7 +49,6 @@
 .sendbtn {
     position: relative;
     display: inline-block;
-    margin-top: 15px;
     padding: 8px 30px;
     text-align: center;
     font-size: 15px;
